--- a/src/ConsoleApp/App.config
+++ b/src/ConsoleApp/App.config
@@ -4,6 +4,10 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
   <appSettings>
-    <add key="StorageConnectionString" value="DefaultEndpointsProtocol=https;AccountName={0};AccountKey={1};EndpointSuffix=core.windows.net"/>
+    <add key="AccountName" value=""/>
+    <add key="AccountKey" value=""/>
+    <add key="ContainerName" value="personal"/>
+    <add key="SubscriberId" value="walaoehh"/>
+    <add key="LocalStoragePath" value="D:\AzureStorage"/>
   </appSettings>
 </configuration>
