--- a/src/SyncEngine/SyncEngine.csproj
+++ b/src/SyncEngine/SyncEngine.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\AzureCloudUtility\AzureCloudUtility.csproj" />
-    <ProjectReference Include="..\StorageFileInfo\StorageFileInfo.csproj" />
+    <PackageReference Include="Microsoft.WindowsAzure.ConfigurationManager" Version="3.2.3" />
+    <PackageReference Include="WindowsAzure.Storage" Version="9.1.0" />
   </ItemGroup>
 
 </Project>
